--- a/_sass/_hacks.scss
+++ b/_sass/_hacks.scss
@@ -1,6 +1,6 @@
 #hacks {
   .hack {
-    padding: 60px 60px;
+    padding: 60px 0 60px 0;
   }
   .hack:nth-child(even) {background: #F7F7F7}
 }
